Updated phone and About

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
   <h1 class="display-1 fw-bold mt-5">Shivani Engineering & Construction Company</h1>
-  <p class="lead">Shivani Engineering & Construction Co. is a growing company in Uttar Pradesh Est. 1999, that has executed construction work for some of the most significant electrical project all over India. We continue to alter the Electrical landscape through several other prestigious project in the residential, commercial and industrial space as well.</p>
+  <p class="lead">Shivani Engineering & Construction Co. is a growing company in Uttar Pradesh Est. 1999, that has executed construction and maintenance work for some of the most significant electrical project all over India. We continue to alter the Electrical landscape through several other prestigious project in the residential, commercial and industrial space as well.</p>
   <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5">Get started free</a>
 </div>
 
@@ -122,7 +122,7 @@
 <div class="py-vh-5 w-100 overflow-hidden" id="services">
   <div class="container">
       <div class="row d-flex justify-content-end">
-<div class="lead" data-aos="fade-down"><p class="lead">Shivani Engineering & Construction Co. is a growing company in Uttar Pradesh Est. 1999, that has executed construction work for some of the most significant electrical project all over India. We continue to alter the Electrical landscape through several other prestigious project in the residential, commercial and industrial space as well.</h2></div>
+<div class="lead" data-aos="fade-down"><p class="lead">Shivani Engineering & Construction Co. is a growing company in Uttar Pradesh Est. 1999, that has executed construction and maintenance work for some of the most significant electrical project all over India. We continue to alter the Electrical landscape through several other prestigious project in the residential, commercial and industrial space as well.</h2></div>
 </div>
 <div class="row d-flex align-items-center">
 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
@@ -311,7 +311,7 @@
       As a team, we are committed to helping you achieve your goals and objectives. Please don’t hesitate to reach out for assistance.”</div>
     <img src="img/webp/gopal-photo.webp" width="100" height="100" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
     <span><span class="fw-bold">Gopal Sharma,</span>
-      Supervisor, Shivani Engineering & Const. Co.</span>
+      Co-ordinator, Shivani Engineering & Const. Co.</span>
   </blockquote>
 </div>
 
@@ -330,8 +330,8 @@
         PO Vidyut Nagar<br>
         Gautam Budh Nagar, Uttar Pradesh<br>
         India - 201008<br>
-        Phone: (+91) 9412223987<br>
-        Email: shivaniengineering@rediffmail.com
+        <strong>Phone:</strong> (+91) 9412573976<br>
+        <strong>Email:</strong> shivaniengineering@rediffmail.com
       </address>
 
   </div>
